objects/EVL_Guidanz_Generate_Email_Notification__e.object
<CustomObject>
    <fields>
        <fullName>Contact_Email_id__c</fullName>
        <label>Contact Email id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Username__c</fullName>
        <label>IAM Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email_Id__c</fullName>
        <label>User Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EVL Guidanz Generate Email Notification</label>
    <pluralLabel>EVL Guidanz Generate Email Notifications</pluralLabel>
</CustomObject>